--- a/colorchanger.html
+++ b/colorchanger.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JavaScript DOM Project</title>
-    <link rel="stylesheet" href="./styles/colorchange.css" />
+    <link rel="stylesheet" href="./colorchange.css" />
   </head>
   <body>
     <button id="button">Press Me to Change</button>
-    <script src="./javascript/button.js"></script>
+    <script src="./button.js"></script>
   </body>
 </html>
